--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -18,7 +18,7 @@
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="已上传：" />
+        android:text="已上传：0" />
 
     <EditText
         android:id="@+id/edit_name"
